// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Law truth-tables — Tier 2 regression > amendment24-global-ot-not-separated-2026 1`] = `
{
  "findings": [
    {
      "category": "base_pay",
      "contractValue": 18000,
      "explanation": "שכר בסיס: בתלוש 21000 ₪, בחוזה 18000 ₪",
      "fieldName": "שכר בסיס",
      "gap": 3000,
      "gapDirection": "overpaid",
      "legalReference": "חוק הגנת השכר, סעיף 5",
      "payslipValue": 21000,
      "severity": "critical",
    },
    {
      "category": "amendment24",
      "contractValue": null,
      "explanation": "תלוש השכר מציג את כל הסכום כשכר בסיס ללא הפרדת שעות נוספות גלובליות — הפרה של תיקון 24",
      "fieldName": "תיקון 24 — הפרדת שעות נוספות",
      "gap": 0,
      "gapDirection": "missing_from_payslip",
      "legalReference": "תיקון 24 לחוק הגנת השכר, התשי"ח-1958 — סעיף 5(ב)(7)",
      "payslipValue": null,
      "severity": "critical",
    },
    {
      "category": "global_overtime",
      "contractValue": 3708.79,
      "explanation": "סכום השעות הנוספות הגלובליות (3000 ₪) נמוך מהמינימום החוקי (3708.79 ₪)",
      "fieldName": "שעות נוספות גלובליות — סכום לא מספיק",
      "gap": 708.79,
      "gapDirection": "underpaid",
      "legalReference": "חוק שעות עבודה ומנוחה — סעיף 16",
      "payslipValue": 3000,
      "severity": "warning",
    },
    {
      "category": "pension_employee",
      "contractValue": 1080,
      "explanation": "פנסיה עובד: מוגדר בחוזה (1080 ₪) אך לא מופיע בתלוש",
      "fieldName": "פנסיה עובד",
      "gap": 1080,
      "gapDirection": "missing_from_payslip",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 0,
      "severity": "warning",
    },
    {
      "category": "pension_employer",
      "contractValue": 1170,
      "explanation": "פנסיה מעסיק: מוגדר בחוזה (1170 ₪) אך לא מופיע בתלוש",
      "fieldName": "פנסיה מעסיק",
      "gap": 1170,
      "gapDirection": "missing_from_payslip",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 0,
      "severity": "warning",
    },
  ],
  "overtimeAnalysis": {
    "actualPay": 0,
    "effectiveHourlyRate": 98.9,
    "expectedPay": 0,
    "gap": 0,
    "model": "global",
  },
  "summary": {
    "critical": 2,
    "info": 0,
    "totalFindings": 5,
    "totalGapAmount": 2958.79,
    "warning": 3,
  },
  "taxAnalysis": {
    "actualTax": 0,
    "creditPoints": 3.25,
    "creditPointsValue": 786.5,
    "expectedTax": 2749.5,
    "overcharge": 0,
    "regionalBenefitValue": 0,
  },
}
`;

exports[`Law truth-tables — Tier 2 regression > eilat-resident-10000-2025 1`] = `
{
  "findings": [
    {
      "category": "pension_employee",
      "contractValue": 600,
      "explanation": "פנסיה עובד: מוגדר בחוזה (600 ₪) אך לא מופיע בתלוש",
      "fieldName": "פנסיה עובד",
      "gap": 600,
      "gapDirection": "missing_from_payslip",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 0,
      "severity": "warning",
    },
    {
      "category": "pension_employer",
      "contractValue": 650,
      "explanation": "פנסיה מעסיק: מוגדר בחוזה (650 ₪) אך לא מופיע בתלוש",
      "fieldName": "פנסיה מעסיק",
      "gap": 650,
      "gapDirection": "missing_from_payslip",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 0,
      "severity": "warning",
    },
    {
      "category": "income_tax",
      "contractValue": 0,
      "explanation": "נוכה מס 800 ₪ במקום 0 ₪ — ייתכן שחסרות נקודות זיכוי",
      "fieldName": "מס הכנסה ביתר",
      "gap": 800,
      "gapDirection": "overpaid",
      "legalReference": "פקודת מס הכנסה",
      "payslipValue": 800,
      "severity": "warning",
    },
  ],
  "overtimeAnalysis": {
    "actualPay": 0,
    "effectiveHourlyRate": 53.76,
    "expectedPay": 0,
    "gap": 0,
    "model": "standard",
  },
  "summary": {
    "critical": 0,
    "info": 0,
    "totalFindings": 3,
    "totalGapAmount": 1250,
    "warning": 3,
  },
  "taxAnalysis": {
    "actualTax": 800,
    "creditPoints": 2.25,
    "creditPointsValue": 544.5,
    "expectedTax": 0,
    "overcharge": 800,
    "regionalBenefitValue": 1000,
  },
}
`;

exports[`Law truth-tables — Tier 2 regression > match-base-12000-2026 1`] = `
{
  "findings": [
    {
      "category": "income_tax",
      "contractValue": 971.5,
      "explanation": "נוכה מס 1290 ₪ במקום 971.5 ₪ — ייתכן שחסרות נקודות זיכוי",
      "fieldName": "מס הכנסה ביתר",
      "gap": 318.5,
      "gapDirection": "overpaid",
      "legalReference": "פקודת מס הכנסה",
      "payslipValue": 1290,
      "severity": "warning",
    },
  ],
  "overtimeAnalysis": {
    "actualPay": 0,
    "effectiveHourlyRate": 65.93,
    "expectedPay": 0,
    "gap": 0,
    "model": "standard",
  },
  "summary": {
    "critical": 0,
    "info": 0,
    "totalFindings": 1,
    "totalGapAmount": 0,
    "warning": 1,
  },
  "taxAnalysis": {
    "actualTax": 1290,
    "creditPoints": 2.25,
    "creditPointsValue": 544.5,
    "expectedTax": 971.5,
    "overcharge": 318.5,
    "regionalBenefitValue": 0,
  },
}
`;

exports[`Law truth-tables — Tier 2 regression > pension-shortfall-2024 1`] = `
{
  "findings": [
    {
      "category": "pension_employee",
      "contractValue": 840,
      "explanation": "פנסיה עובד: לפי החוזה 840 ₪, בתלוש 700 ₪ — הפרש 140 ₪",
      "fieldName": "פנסיה עובד",
      "gap": 140,
      "gapDirection": "underpaid",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 700,
      "severity": "warning",
    },
    {
      "category": "pension_employer",
      "contractValue": 910,
      "explanation": "פנסיה מעסיק: לפי החוזה 910 ₪, בתלוש 770 ₪ — הפרש 140 ₪",
      "fieldName": "פנסיה מעסיק",
      "gap": 140,
      "gapDirection": "underpaid",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 770,
      "severity": "warning",
    },
    {
      "category": "income_tax",
      "contractValue": 1400.1,
      "explanation": "נוכה מס 1500 ₪ במקום 1400.1 ₪ — ייתכן שחסרות נקודות זיכוי",
      "fieldName": "מס הכנסה ביתר",
      "gap": 99.9,
      "gapDirection": "overpaid",
      "legalReference": "פקודת מס הכנסה",
      "payslipValue": 1500,
      "severity": "warning",
    },
  ],
  "overtimeAnalysis": {
    "actualPay": 0,
    "effectiveHourlyRate": 76.92,
    "expectedPay": 0,
    "gap": 0,
    "model": "standard",
  },
  "summary": {
    "critical": 0,
    "info": 0,
    "totalFindings": 3,
    "totalGapAmount": 280,
    "warning": 3,
  },
  "taxAnalysis": {
    "actualTax": 1500,
    "creditPoints": 2.25,
    "creditPointsValue": 544.5,
    "expectedTax": 1400.1,
    "overcharge": 99.9,
    "regionalBenefitValue": 0,
  },
}
`;

exports[`Law truth-tables — Tier 2 regression > single-parent-2kids-14000-2022 1`] = `
{
  "findings": [
    {
      "category": "pension_employee",
      "contractValue": 840,
      "explanation": "פנסיה עובד: מוגדר בחוזה (840 ₪) אך לא מופיע בתלוש",
      "fieldName": "פנסיה עובד",
      "gap": 840,
      "gapDirection": "missing_from_payslip",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 0,
      "severity": "warning",
    },
    {
      "category": "pension_employer",
      "contractValue": 910,
      "explanation": "פנסיה מעסיק: מוגדר בחוזה (910 ₪) אך לא מופיע בתלוש",
      "fieldName": "פנסיה מעסיק",
      "gap": 910,
      "gapDirection": "missing_from_payslip",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 0,
      "severity": "warning",
    },
    {
      "category": "income_tax",
      "contractValue": 370.85,
      "explanation": "נוכה מס 1500 ₪ במקום 370.85 ₪ — ייתכן שחסרות נקודות זיכוי",
      "fieldName": "מס הכנסה ביתר",
      "gap": 1129.15,
      "gapDirection": "overpaid",
      "legalReference": "פקודת מס הכנסה",
      "payslipValue": 1500,
      "severity": "warning",
    },
  ],
  "overtimeAnalysis": {
    "actualPay": 0,
    "effectiveHourlyRate": 76.92,
    "expectedPay": 0,
    "gap": 0,
    "model": "standard",
  },
  "summary": {
    "critical": 0,
    "info": 0,
    "totalFindings": 3,
    "totalGapAmount": 1750,
    "warning": 3,
  },
  "taxAnalysis": {
    "actualTax": 1500,
    "creditPoints": 7.25,
    "creditPointsValue": 1616.75,
    "expectedTax": 370.85,
    "overcharge": 1129.15,
    "regionalBenefitValue": 0,
  },
}
`;

exports[`Law truth-tables — Tier 2 regression > underpaid-base-2026 1`] = `
{
  "findings": [
    {
      "category": "base_pay",
      "contractValue": 12000,
      "explanation": "שכר בסיס: לפי החוזה 12000 ₪, בתלוש 11500 ₪ — הפרש 500 ₪",
      "fieldName": "שכר בסיס",
      "gap": 500,
      "gapDirection": "underpaid",
      "legalReference": "חוק הגנת השכר, סעיף 5",
      "payslipValue": 11500,
      "severity": "critical",
    },
    {
      "category": "pension_employee",
      "contractValue": 720,
      "explanation": "פנסיה עובד: מוגדר בחוזה (720 ₪) אך לא מופיע בתלוש",
      "fieldName": "פנסיה עובד",
      "gap": 720,
      "gapDirection": "missing_from_payslip",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 0,
      "severity": "warning",
    },
    {
      "category": "pension_employer",
      "contractValue": 780,
      "explanation": "פנסיה מעסיק: מוגדר בחוזה (780 ₪) אך לא מופיע בתלוש",
      "fieldName": "פנסיה מעסיק",
      "gap": 780,
      "gapDirection": "missing_from_payslip",
      "legalReference": "צו הרחבה לביטוח פנסיוני מקיף",
      "payslipValue": 0,
      "severity": "warning",
    },
    {
      "category": "income_tax",
      "contractValue": 871.5,
      "explanation": "נוכה מס 1180 ₪ במקום 871.5 ₪ — ייתכן שחסרות נקודות זיכוי",
      "fieldName": "מס הכנסה ביתר",
      "gap": 308.5,
      "gapDirection": "overpaid",
      "legalReference": "פקודת מס הכנסה",
      "payslipValue": 1180,
      "severity": "warning",
    },
  ],
  "overtimeAnalysis": {
    "actualPay": 0,
    "effectiveHourlyRate": 65.93,
    "expectedPay": 0,
    "gap": 0,
    "model": "standard",
  },
  "summary": {
    "critical": 1,
    "info": 0,
    "totalFindings": 4,
    "totalGapAmount": 2000,
    "warning": 3,
  },
  "taxAnalysis": {
    "actualTax": 1180,
    "creditPoints": 2.25,
    "creditPointsValue": 544.5,
    "expectedTax": 871.5,
    "overcharge": 308.5,
    "regionalBenefitValue": 0,
  },
}
`;
